# tmdl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
src/tmdl/: lexer.py  main.py
tests/: test_lexer.py
