[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "tmdl"
version = "0.0.1"
authors = [
  { name="Sanketh Jain", email="sankethjain81@gmail.com" },
]
description = "A simple tmdl parser"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sankethsj/tmdl"
Issues = "https://github.com/sankethsj/tmdl/issues"